<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/txtNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lnum"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lnombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ledad"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lcorreo"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRegistrarActualizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnactualizar"
        android:layout_marginTop="20dp" />
</LinearLayout>
