<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnp1Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btninserta"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnactualizar"
        android:layout_marginBottom="10dp" />

    <GridView
        android:id="@+id/GVDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btneliminar"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btntp1termina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnterminar" />

</LinearLayout>
